maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:26: error: unclosed comment
            } /*
              ^JediEscaper:26: error: unclosed comment
            } /*
              ^JediEscaper:26: error: unclosed comment
            } /*
              ^JediEscaper:26: error: unclosed comment
            } /*
              ^JediEscaper:26: error: unclosed comment
            } /*
              ^JediEscaper:26: error: unclosed comment
            } /*
              ^JediEscaper:26: error: unclosed comment
            } /*
              ^JediEscaper:26: error: unclosed comment
            } /*
              ^JediEscaper:2: error: Missing closing brace `}' assumed here
override def run() {
^JediEscaper:2: error: expected start of definition
override def run() {
         ^JediEscaper:26: error: unclosed comment
            } /*
              ^JediEscaper:59: error: Missing closing brace `}' assumed here
}
 ^JediEscaper:59: error: Missing closing brace `}' assumed here
}
 ^JediEscaper:59: error: Missing closing brace `}' assumed here
}
 ^JediEscaper:59: error: Missing closing brace `}' assumed here
}
 ^JediEscaper:59: error: Missing closing brace `}' assumed here
}
 ^